crates/phynix-parse/tests/expr/snapshots/tests__expr__literal__array_literal_skipped_elements.snap
---
source: crates/phynix-parse/tests/expr/literal.rs
expression: script
---
items:
  - ExprStmt:
      expr:
        ArrayLiteral:
          items:
            - key: ~
              value: ~
              unpack: false
            - key: ~
              value:
                VarRef:
                  name: {}
              unpack: false
            - key: ~
              value: ~
              unpack: false
