crates/phynix-parse/tests/expr/snapshots/tests__expr__literal__bool_literal.snap
---
source: crates/phynix-parse/tests/expr/literal.rs
assertion_line: 20
expression: script
---
items:
  - ExprStmt:
      expr:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
