crates/phynix-parse/tests/expr/snapshots/tests__expr__literal__float_literal.snap
---
source: crates/phynix-parse/tests/expr/literal.rs
assertion_line: 10
expression: script
---
items:
  - ExprStmt:
      expr:
        FloatLiteral:
          value: 3.14
