crates/phynix-parse/tests/expr/snapshots/tests__expr__literal__int_literal.snap
---
source: crates/phynix-parse/tests/expr/literal.rs
assertion_line: 5
expression: script
---
items:
  - ExprStmt:
      expr:
        IntLiteral:
          value: 42
