crates/phynix-parse/tests/expr/snapshots/tests__expr__literal__null_literal.snap
---
source: crates/phynix-parse/tests/expr/literal.rs
assertion_line: 25
expression: script
---
items:
  - ExprStmt:
      expr:
        NameRef:
          name:
            absolute: false
            parts:
              - {}
