crates/phynix-parse/tests/expr/snapshots/tests__expr__literal__string_literal.snap
---
source: crates/phynix-parse/tests/expr/literal.rs
assertion_line: 15
expression: script
---
items:
  - ExprStmt:
      expr:
        StringLiteral:
          style: SingleQuoted
